# torch-learning

./: .gitignore
cpp/01-example-app/: CMakeLists.txt  example-app.cpp
cpp/02-dcgan/: CMakeLists.txt  dcgan.cpp
cpp/03-resnet/: CMakeLists.txt  main.cpp
cpp/04-load-ckpt/: CMakeLists.txt  main.cpp
python/02-dcgan/: display.py
python/06-rnn-learning/: rnn_practice.ipynb
python/07-modulelist-index/: test.py
python/08-fgsm/: fgsm_tutorial.ipynb
python/08-sklearn/: sklearn_cht_class.ipynb
python/09-train-classify/: classification.ipynb  docker-compose.yml  docker-run.sh  export_mlflow_model.ipynb  image_pyfunc.py  model_calc_perf.ipynb  predict.html  predict.js  predict_multi.html  predict_multi.js  score_images_rest.py  web.html  web.js
python/10-gluoncv-with-pytorch/: 01-play-gluoncv.ipynb  02-pose-mxnet.ipynb  03-segmentation.ipynb
python/11-pytorch-tensorboard/: basic-tensorboard.ipynb
